# hsr-agent

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  pyproject.toml
docs/: API.md  BACKEND_REQ_persistence_audit.md  MECHANICS.md  MECHANICS_AUDIT.md  search_regression.json
hsr-agent-go/: go.mod
hsr-agent-go/cmd/hsr-agent/: main.go
hsr-agent-go/internal/agent/: agent.go
hsr-agent-go/internal/calc/: calc.go  calc_test.go
hsr-agent-go/internal/config/: config.go
hsr-agent-go/internal/db/: db.go
hsr-agent-go/internal/embedding/: embedding.go  embedding_test.go
hsr-agent-go/internal/httpapi/: persistence.go  server.go  server_test.go
hsr-agent-go/internal/rerank/: rerank.go  rerank_test.go
hsr-agent-go/internal/tools/: mechanics.go  mechanics_test.go  search_test.go  tools.go
hsr-agent-go/web/: index.html  package-lock.json  package.json  vite.config.ts
hsr-agent-go/web/src/: App.tsx  index.css
hsr_agent/: __init__.py  db.py  llm_client.py
migrations/: 001_schema.sql  002_mechanics.sql  003_equipment_axes.sql  004_embedding_metadata.sql  005_entity_embeddings.sql  006_persistence_audit.sql  007_source_stat_dependency.sql  008_sparkle_source_stat_dependency.sql
schemas/: __init__.py  axes_vocab.py  equipment_axes_vocab.py  modifier_vocab.py
scripts/: __init__.py  build_asset_paths.py  compute_cooccur.py  embed.py  enrich.py  enrich_equipment.py  enrich_worker.py  extract_modifiers.py  load.py  load_axes.py  load_equipment_axes.py  migrate.py  scrape_nanoka_hsr.py  scrape_nanoka_hsr_assets.py  search_regression.py
(+42 files in other folders)
